work in progress

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,11 @@
   <body>
   <svg style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
+      <symbol id="icon-close" viewBox="0 0 32 32">
+        <title>close</title>
+        <path class="path1" fill="none" stroke="#000" stroke-width="1.3333" stroke-miterlimit="10" stroke-linecap="square" stroke-linejoin="miter" d="M25.333 6.667l-18.667 18.667"></path>
+        <path class="path2" fill="none" stroke="#000" stroke-width="1.3333" stroke-miterlimit="10" stroke-linecap="square" stroke-linejoin="miter" d="M25.333 25.333l-18.667-18.667"></path>
+      </symbol>
       <symbol id="icon-tools" viewBox="0 0 32 32">
         <title>tools</title>
         <path class="path1" fill="#f0a700" stroke="#f0a700" stroke-width="1.3913" stroke-miterlimit="4" stroke-linecap="square" stroke-linejoin="miter" d="M26.16 10.498l-4.824-4.781 4.009-3.973c-0.883-0.269-1.903-0.404-2.922-0.337-3.805 0.337-6.863 3.703-6.795 7.474 0 0.741 0.136 1.481 0.34 2.155l-13.046 11.446c-1.97 1.683-2.038 4.713-0.204 6.531s4.824 1.751 6.591-0.202l11.551-12.928c1.155 0.337 2.446 0.471 3.805 0.202 2.718-0.539 4.96-2.559 5.708-5.185 0.34-1.616 0.204-3.097-0.204-4.377l-4.009 3.973z"></path>
