--- a/app/index.html
+++ b/app/index.html
@@ -5,47 +5,58 @@
     <title>data4sdgs-highway</title>
   </head>
   <body>
-  <svg style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+
+    <svg style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
-      <symbol id="icon-check" viewBox="0 0 28 28">
-        <title>check</title>
-        <path class="path1" d="M26.109 8.844c0 0.391-0.156 0.781-0.438 1.062l-13.438 13.438c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-7.781-7.781c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l2.125-2.125c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l4.594 4.609 10.25-10.266c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l2.125 2.125c0.281 0.281 0.438 0.672 0.438 1.062z"></path>
-      </symbol>
-      <symbol id="icon-close" viewBox="0 0 28 28">
-        <title>close</title>
-        <path class="path1" fill="none" stroke="#000" stroke-width="1.1667" stroke-miterlimit="10" stroke-linecap="square" stroke-linejoin="miter" d="M22.167 5.833l-16.333 16.333"></path>
-        <path class="path2" fill="none" stroke="#000" stroke-width="1.1667" stroke-miterlimit="10" stroke-linecap="square" stroke-linejoin="miter" d="M22.167 22.167l-16.333-16.333"></path>
-      </symbol>
-      <symbol id="icon-tools" viewBox="0 0 28 28">
-        <title>tools</title>
-        <path class="path1" fill="#f0a700" stroke="#f0a700" stroke-width="1.2174" stroke-miterlimit="4" stroke-linecap="square" stroke-linejoin="miter" d="M22.89 9.186l-4.221-4.183 3.508-3.476c-0.773-0.236-1.665-0.353-2.557-0.295-3.329 0.295-6.005 3.24-5.945 6.54 0 0.648 0.119 1.296 0.297 1.885l-11.415 10.016c-1.724 1.473-1.784 4.124-0.178 5.715s4.221 1.532 5.767-0.177l10.107-11.312c1.011 0.295 2.14 0.412 3.329 0.177 2.378-0.471 4.34-2.239 4.994-4.537 0.297-1.414 0.178-2.71-0.178-3.83l-3.508 3.476z"></path>
-        <path class="path2" fill="none" stroke="#f0a700" stroke-width="1.2174" stroke-miterlimit="4" stroke-linecap="square" stroke-linejoin="miter" d="M4.935 8.892l2.557-0.825 0.831-2.474-3.388-3.359-3.33 3.359z"></path>
-        <path class="path3" fill="none" stroke="#f0a700" stroke-width="1.2174" stroke-miterlimit="4" stroke-linecap="square" stroke-linejoin="miter" d="M19.561 20.085l2.378 2.357"></path>
-      </symbol>
-      <symbol id="icon-group" viewBox="0 0 27 28">
-        <title>group</title>
-        <path class="path1" fill="#f0a700" stroke="#f0a700" stroke-width="1.0769" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M13.462 7.538v0c-1.784 0-3.231-1.446-3.231-3.231s1.446-3.231 3.231-3.231c1.784 0 3.231 1.446 3.231 3.231s-1.446 3.231-3.231 3.231"></path>
-        <path class="path2" fill="none" stroke="#f0a700" stroke-width="1.0769" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M4.846 21.538v-8.615c0-1.217 0.421-2.328 1.105-3.231h-3.259c-1.19 0-2.154 0.964-2.154 2.154v6.462h2.154v5.385c0 0.594 0.482 1.077 1.077 1.077h2.154c0.594 0 1.077-0.482 1.077-1.077v-2.154h-2.154z"></path>
-        <path class="path3" fill="#f0a700" stroke="#f0a700" stroke-width="1.0769" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M11.308 26.923c-0.594 0-1.077-0.482-1.077-1.077v-6.462h-3.231v-6.462c0-1.784 1.446-3.231 3.231-3.231h6.462c1.784 0 3.231 1.446 3.231 3.231v6.462h-3.231v6.462c0 0.594-0.482 1.077-1.077 1.077h-4.308z"></path>
-        <path class="path4" fill="none" stroke="#f0a700" stroke-width="1.0769" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M2.692 5.385c0-1.19 0.964-2.154 2.154-2.154s2.154 0.964 2.154 2.154c0 1.19-0.964 2.154-2.154 2.154s-2.154-0.964-2.154-2.154z"></path>
-        <path class="path5" fill="none" stroke="#f0a700" stroke-width="1.0769" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M22.077 21.538v-8.615c0-1.217-0.421-2.328-1.105-3.231h3.259c1.19 0 2.154 0.964 2.154 2.154v6.462h-2.154v5.385c0 0.594-0.482 1.077-1.077 1.077h-2.154c-0.594 0-1.077-0.482-1.077-1.077v-2.154h2.154z"></path>
-        <path class="path6" fill="none" stroke="#f0a700" stroke-width="1.0769" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M22.077 7.538v0c1.19 0 2.154-0.964 2.154-2.154s-0.964-2.154-2.154-2.154c-1.19 0-2.154 0.964-2.154 2.154s0.964 2.154 2.154 2.154"></path>
-      </symbol>
-      <symbol id="icon-data" viewBox="0 0 24 28">
-        <title>data</title>
-        <path class="path1" fill="none" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M21.253 2.907c0 1.097-0.89 1.987-1.987 1.987s-1.987-0.89-1.987-1.987c0-1.097 0.89-1.987 1.987-1.987s1.987 0.89 1.987 1.987z"></path>
-        <path class="path2" fill="none" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M13.966 24.767c0 1.097-0.89 1.987-1.987 1.987s-1.987-0.89-1.987-1.987c0-1.097 0.89-1.987 1.987-1.987s1.987 0.89 1.987 1.987z"></path>
-        <path class="path3" fill="#f0a700" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M22.578 20.13c0 0.732-0.593 1.325-1.325 1.325s-1.325-0.593-1.325-1.325c0-0.732 0.593-1.325 1.325-1.325s1.325 0.593 1.325 1.325z"></path>
-        <path class="path4" fill="none" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M3.367 17.481c0 0.732-0.593 1.325-1.325 1.325s-1.325-0.593-1.325-1.325c0-0.732 0.593-1.325 1.325-1.325s1.325 0.593 1.325 1.325z"></path>
-        <path class="path5" fill="#f0a700" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M5.354 2.244c0 0.732-0.593 1.325-1.325 1.325s-1.325-0.593-1.325-1.325c0-0.732 0.593-1.325 1.325-1.325s1.325 0.593 1.325 1.325z"></path>
-        <path class="path6" fill="#f0a700" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M11.979 13.506c0 1.463-1.186 2.65-2.65 2.65s-2.649-1.186-2.649-2.65c0-1.463 1.186-2.649 2.649-2.649s2.65 1.186 2.65 2.649z"></path>
-        <path class="path7" fill="none" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="miter" d="M11.717 14.671l1.478 0.891"></path>
-        <path class="path8" fill="none" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="miter" d="M19.886 19.291l-5.038-2.708"></path>
-      </symbol>
+    <symbol id="icon-check" viewBox="0 0 28 28">
+    <title>check</title>
+    <path class="path1" d="M26.109 8.844c0 0.391-0.156 0.781-0.438 1.062l-13.438 13.438c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-7.781-7.781c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l2.125-2.125c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l4.594 4.609 10.25-10.266c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l2.125 2.125c0.281 0.281 0.438 0.672 0.438 1.062z"></path>
+    </symbol>
+    <symbol id="icon-close" viewBox="0 0 28 28">
+    <title>close</title>
+    <path class="path1" fill="none" stroke="#000" stroke-width="1.1667" stroke-miterlimit="10" stroke-linecap="square" stroke-linejoin="miter" d="M22.167 5.833l-16.333 16.333"></path>
+    <path class="path2" fill="none" stroke="#000" stroke-width="1.1667" stroke-miterlimit="10" stroke-linecap="square" stroke-linejoin="miter" d="M22.167 22.167l-16.333-16.333"></path>
+    </symbol>
+    <symbol id="icon-tools" viewBox="0 0 28 28">
+    <title>tools</title>
+    <path class="path1" fill="#f0a700" stroke="#f0a700" stroke-width="1.2174" stroke-miterlimit="4" stroke-linecap="square" stroke-linejoin="miter" d="M22.89 9.186l-4.221-4.183 3.508-3.476c-0.773-0.236-1.665-0.353-2.557-0.295-3.329 0.295-6.005 3.24-5.945 6.54 0 0.648 0.119 1.296 0.297 1.885l-11.415 10.016c-1.724 1.473-1.784 4.124-0.178 5.715s4.221 1.532 5.767-0.177l10.107-11.312c1.011 0.295 2.14 0.412 3.329 0.177 2.378-0.471 4.34-2.239 4.994-4.537 0.297-1.414 0.178-2.71-0.178-3.83l-3.508 3.476z"></path>
+    <path class="path2" fill="none" stroke="#f0a700" stroke-width="1.2174" stroke-miterlimit="4" stroke-linecap="square" stroke-linejoin="miter" d="M4.935 8.892l2.557-0.825 0.831-2.474-3.388-3.359-3.33 3.359z"></path>
+    <path class="path3" fill="none" stroke="#f0a700" stroke-width="1.2174" stroke-miterlimit="4" stroke-linecap="square" stroke-linejoin="miter" d="M19.561 20.085l2.378 2.357"></path>
+    </symbol>
+    <symbol id="icon-group" viewBox="0 0 27 28">
+    <title>group</title>
+    <path class="path1" fill="#f0a700" stroke="#f0a700" stroke-width="1.0769" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M13.462 7.538v0c-1.784 0-3.231-1.446-3.231-3.231s1.446-3.231 3.231-3.231c1.784 0 3.231 1.446 3.231 3.231s-1.446 3.231-3.231 3.231"></path>
+    <path class="path2" fill="none" stroke="#f0a700" stroke-width="1.0769" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M4.846 21.538v-8.615c0-1.217 0.421-2.328 1.105-3.231h-3.259c-1.19 0-2.154 0.964-2.154 2.154v6.462h2.154v5.385c0 0.594 0.482 1.077 1.077 1.077h2.154c0.594 0 1.077-0.482 1.077-1.077v-2.154h-2.154z"></path>
+    <path class="path3" fill="#f0a700" stroke="#f0a700" stroke-width="1.0769" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M11.308 26.923c-0.594 0-1.077-0.482-1.077-1.077v-6.462h-3.231v-6.462c0-1.784 1.446-3.231 3.231-3.231h6.462c1.784 0 3.231 1.446 3.231 3.231v6.462h-3.231v6.462c0 0.594-0.482 1.077-1.077 1.077h-4.308z"></path>
+    <path class="path4" fill="none" stroke="#f0a700" stroke-width="1.0769" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M2.692 5.385c0-1.19 0.964-2.154 2.154-2.154s2.154 0.964 2.154 2.154c0 1.19-0.964 2.154-2.154 2.154s-2.154-0.964-2.154-2.154z"></path>
+    <path class="path5" fill="none" stroke="#f0a700" stroke-width="1.0769" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M22.077 21.538v-8.615c0-1.217-0.421-2.328-1.105-3.231h3.259c1.19 0 2.154 0.964 2.154 2.154v6.462h-2.154v5.385c0 0.594-0.482 1.077-1.077 1.077h-2.154c-0.594 0-1.077-0.482-1.077-1.077v-2.154h2.154z"></path>
+    <path class="path6" fill="none" stroke="#f0a700" stroke-width="1.0769" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M22.077 7.538v0c1.19 0 2.154-0.964 2.154-2.154s-0.964-2.154-2.154-2.154c-1.19 0-2.154 0.964-2.154 2.154s0.964 2.154 2.154 2.154"></path>
+    </symbol>
+    <symbol id="icon-data" viewBox="0 0 24 28">
+    <title>data</title>
+    <path class="path1" fill="none" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M21.253 2.907c0 1.097-0.89 1.987-1.987 1.987s-1.987-0.89-1.987-1.987c0-1.097 0.89-1.987 1.987-1.987s1.987 0.89 1.987 1.987z"></path>
+    <path class="path2" fill="none" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M13.966 24.767c0 1.097-0.89 1.987-1.987 1.987s-1.987-0.89-1.987-1.987c0-1.097 0.89-1.987 1.987-1.987s1.987 0.89 1.987 1.987z"></path>
+    <path class="path3" fill="#f0a700" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M22.578 20.13c0 0.732-0.593 1.325-1.325 1.325s-1.325-0.593-1.325-1.325c0-0.732 0.593-1.325 1.325-1.325s1.325 0.593 1.325 1.325z"></path>
+    <path class="path4" fill="none" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M3.367 17.481c0 0.732-0.593 1.325-1.325 1.325s-1.325-0.593-1.325-1.325c0-0.732 0.593-1.325 1.325-1.325s1.325 0.593 1.325 1.325z"></path>
+    <path class="path5" fill="#f0a700" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M5.354 2.244c0 0.732-0.593 1.325-1.325 1.325s-1.325-0.593-1.325-1.325c0-0.732 0.593-1.325 1.325-1.325s1.325 0.593 1.325 1.325z"></path>
+    <path class="path6" fill="#f0a700" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" d="M11.979 13.506c0 1.463-1.186 2.65-2.65 2.65s-2.649-1.186-2.649-2.65c0-1.463 1.186-2.649 2.649-2.649s2.65 1.186 2.65 2.649z"></path>
+    <path class="path7" fill="none" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="miter" d="M11.717 14.671l1.478 0.891"></path>
+    <path class="path8" fill="none" stroke="#f0a700" stroke-width="0.875" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="miter" d="M19.886 19.291l-5.038-2.708"></path>
+    </symbol>
+    <symbol id="icon-share" viewBox="0 0 32 32">
+    <title>share</title>
+    <path class="path1" d="M27 22c-1.411 0-2.685 0.586-3.594 1.526l-13.469-6.734c0.041-0.258 0.063-0.522 0.063-0.791s-0.022-0.534-0.063-0.791l13.469-6.734c0.909 0.94 2.183 1.526 3.594 1.526 2.761 0 5-2.239 5-5s-2.239-5-5-5-5 2.239-5 5c0 0.269 0.022 0.534 0.063 0.791l-13.469 6.734c-0.909-0.94-2.183-1.526-3.594-1.526-2.761 0-5 2.239-5 5s2.239 5 5 5c1.411 0 2.685-0.586 3.594-1.526l13.469 6.734c-0.041 0.258-0.063 0.522-0.063 0.791 0 2.761 2.239 5 5 5s5-2.239 5-5c0-2.761-2.239-5-5-5z"></path>
+    </symbol>
+    <symbol id="icon-facebook" viewBox="0 0 32 32">
+    <title>facebook</title>
+    <path class="path1" d="M29 0h-26c-1.65 0-3 1.35-3 3v26c0 1.65 1.35 3 3 3h13v-14h-4v-4h4v-2c0-3.306 2.694-6 6-6h4v4h-4c-1.1 0-2 0.9-2 2v2h6l-1 4h-5v14h9c1.65 0 3-1.35 3-3v-26c0-1.65-1.35-3-3-3z"></path>
+    </symbol>
+    <symbol id="icon-twitter" viewBox="0 0 32 32">
+    <title>twitter</title>
+    <path class="path1" d="M32 7.075c-1.175 0.525-2.444 0.875-3.769 1.031 1.356-0.813 2.394-2.1 2.887-3.631-1.269 0.75-2.675 1.3-4.169 1.594-1.2-1.275-2.906-2.069-4.794-2.069-3.625 0-6.563 2.938-6.563 6.563 0 0.512 0.056 1.012 0.169 1.494-5.456-0.275-10.294-2.888-13.531-6.862-0.563 0.969-0.887 2.1-0.887 3.3 0 2.275 1.156 4.287 2.919 5.463-1.075-0.031-2.087-0.331-2.975-0.819 0 0.025 0 0.056 0 0.081 0 3.181 2.263 5.838 5.269 6.437-0.55 0.15-1.131 0.231-1.731 0.231-0.425 0-0.831-0.044-1.237-0.119 0.838 2.606 3.263 4.506 6.131 4.563-2.25 1.762-5.075 2.813-8.156 2.813-0.531 0-1.050-0.031-1.569-0.094 2.913 1.869 6.362 2.95 10.069 2.95 12.075 0 18.681-10.006 18.681-18.681 0-0.287-0.006-0.569-0.019-0.85 1.281-0.919 2.394-2.075 3.275-3.394z"></path>
+    </symbol>
     </defs>
-  </svg>
-
-
+    </svg>
 
   <div id="app"></div>
     <!-- built files will be auto injected -->
