--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="static/logos/favicon.ico" type="image/x-icon" />
     <title>data4sdgs-highway</title>
   </head>
   <body>
