added hightligh support

--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="static/logos/favicon.ico" type="image/x-icon" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=1024, initial-scale=1">
+    <link rel="icon" href="/static/logos/favicon.ico" type="image/x-icon" />
     <title>data4sdgs-highway</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/monokai-sublime.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
   </head>
   <body>
 
