includes google analytics into webpack and index.html

--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,15 @@
     </defs>
     </svg>
 
-  <div id="app"></div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+      window.ga = function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+      ga('create', '<%= htmlWebpackPlugin.options.googleAnalytics %>', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
   </body>
 </html>
