changes styles in console, dataset, and home components

--- a/app/index.html
+++ b/app/index.html
@@ -19,8 +19,8 @@
     </symbol>
     <symbol id="icon-close" viewBox="0 0 28 28">
     <title>close</title>
-    <path class="path1" fill="none" stroke="#000" stroke-width="1.1667" stroke-miterlimit="10" stroke-linecap="square" stroke-linejoin="miter" d="M22.167 5.833l-16.333 16.333"></path>
-    <path class="path2" fill="none" stroke="#000" stroke-width="1.1667" stroke-miterlimit="10" stroke-linecap="square" stroke-linejoin="miter" d="M22.167 22.167l-16.333-16.333"></path>
+    <path class="path1" fill="none" stroke="#D7D5D5" stroke-width="1.1667" stroke-miterlimit="10" stroke-linecap="square" stroke-linejoin="miter" d="M22.167 5.833l-16.333 16.333"></path>
+    <path class="path2" fill="none" stroke="#D7D5D5" stroke-width="1.1667" stroke-miterlimit="10" stroke-linecap="square" stroke-linejoin="miter" d="M22.167 22.167l-16.333-16.333"></path>
     </symbol>
     <symbol id="icon-tools" viewBox="0 0 28 28">
     <title>tools</title>
