--- a/app/index.html
+++ b/app/index.html
@@ -68,10 +68,10 @@
       <title>check</title>
       <path d="M26.109 8.844c0 0.391-0.156 0.781-0.438 1.062l-13.438 13.438c-0.281 0.281-0.672 0.438-1.062 0.438s-0.781-0.156-1.062-0.438l-7.781-7.781c-0.281-0.281-0.438-0.672-0.438-1.062s0.156-0.781 0.438-1.062l2.125-2.125c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l4.594 4.609 10.25-10.266c0.281-0.281 0.672-0.438 1.062-0.438s0.781 0.156 1.062 0.438l2.125 2.125c0.281 0.281 0.438 0.672 0.438 1.062z"></path>
       </symbol>
-      <symbol id="icon-close" viewBox="0 0 28 28">
+      <symbol id="icon-close" viewBox="0 0 32 32">
       <title>close</title>
-      <path stroke-width="1.1667" stroke-miterlimit="10" stroke-linecap="square" stroke-linejoin="miter" d="M22.167 5.833l-16.333 16.333"></path>
-      <path stroke-width="1.1667" stroke-miterlimit="10" stroke-linecap="square" stroke-linejoin="miter" d="M22.167 22.167l-16.333-16.333"></path>
+      <path fill="#d7d5d5" style="fill: var(--color1, #d7d5d5)" d="M30.713 0.162l0.943 0.943-30.552 30.552-0.943-0.943z"></path>
+      <path fill="#d7d5d5" style="fill: var(--color1, #d7d5d5)" d="M31.657 30.713l-0.943 0.943-30.552-30.552 0.943-0.943z"></path>
       </symbol>
       <symbol id="icon-share" viewBox="0 0 32 32">
       <title>share</title>
