fix: related datasets fetch

--- a/app/icons/symbol-defs.html
+++ b/app/icons/symbol-defs.html
@@ -1,35 +1,29 @@
 <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <defs>
-<symbol id="icon-book" viewBox="0 0 26 32">
-<title>book</title>
-<path stroke-width="2.9091" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M1.455 26.909c0-2.008 1.628-3.636 3.636-3.636h19.636"></path>
-<path stroke-width="2.9091" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M5.091 1.455h19.636v29.091h-19.636c-2.008 0-3.636-1.628-3.636-3.636v-21.818c0-2.008 1.628-3.636 3.636-3.636z"></path>
-</symbol>
-<symbol id="icon-info" viewBox="0 0 32 32">
-<title>info</title>
-<path d="M16 32c-8.837 0-16-7.163-16-16s7.163-16 16-16c8.837 0 16 7.163 16 16s-7.163 16-16 16zM16 28.444c6.873 0 12.444-5.572 12.444-12.444s-5.572-12.444-12.444-12.444c-6.873 0-12.444 5.572-12.444 12.444s5.572 12.444 12.444 12.444zM17.778 21.689c0 0.982-0.796 1.778-1.778 1.778s-1.778-0.796-1.778-1.778v-5.689c0-0.982 0.796-1.778 1.778-1.778s1.778 0.796 1.778 1.778v5.689zM16 12.444c-0.982 0-1.778-0.796-1.778-1.778s0.796-1.778 1.778-1.778c0.982 0 1.778 0.796 1.778 1.778s-0.796 1.778-1.778 1.778z"></path>
-</symbol>
 <symbol id="icon-lock" viewBox="0 0 29 32">
 <title>lock</title>
-<path stroke-width="2.9091" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M4.364 14.545h20.364c1.607 0 2.909 1.302 2.909 2.909v10.182c0 1.607-1.302 2.909-2.909 2.909h-20.364c-1.607 0-2.909-1.302-2.909-2.909v-10.182c0-1.607 1.302-2.909 2.909-2.909z"></path>
-<path stroke-width="2.9091" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M7.273 14.545v-5.818c0-4.017 3.256-7.273 7.273-7.273s7.273 3.256 7.273 7.273v5.818"></path>
+<path d="M4.364 16c-0.803 0-1.455 0.651-1.455 1.455v10.182c0 0.803 0.651 1.455 1.455 1.455h20.364c0.803 0 1.455-0.651 1.455-1.455v-10.182c0-0.803-0.651-1.455-1.455-1.455h-20.364zM5.818 13.091v-4.364c0-4.82 3.907-8.727 8.727-8.727s8.727 3.907 8.727 8.727v4.364h1.455c2.41 0 4.364 1.954 4.364 4.364v10.182c0 2.41-1.954 4.364-4.364 4.364h-20.364c-2.41 0-4.364-1.954-4.364-4.364v-10.182c0-2.41 1.954-4.364 4.364-4.364h1.455zM8.727 13.091h11.636v-4.364c0-3.213-2.605-5.818-5.818-5.818s-5.818 2.605-5.818 5.818v4.364z"></path>
 </symbol>
 <symbol id="icon-unlock" viewBox="0 0 29 32">
 <title>unlock</title>
-<path stroke-width="2.9091" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M4.364 14.545h20.364c1.607 0 2.909 1.302 2.909 2.909v10.182c0 1.607-1.302 2.909-2.909 2.909h-20.364c-1.607 0-2.909-1.302-2.909-2.909v-10.182c0-1.607 1.302-2.909 2.909-2.909z"></path>
-<path stroke-width="2.9091" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M7.273 14.545v-5.818c-0.004-3.736 2.824-6.868 6.542-7.243s7.115 2.127 7.858 5.789"></path>
+<path d="M4.364 16c-0.803 0-1.455 0.651-1.455 1.455v10.182c0 0.803 0.651 1.455 1.455 1.455h20.364c0.803 0 1.455-0.651 1.455-1.455v-10.182c0-0.803-0.651-1.455-1.455-1.455h-20.364zM5.818 13.091v-4.362c-0.005-4.484 3.389-8.241 7.85-8.692s8.538 2.552 9.43 6.946c0.16 0.787-0.349 1.555-1.136 1.715s-1.555-0.349-1.715-1.136c-0.595-2.929-3.313-4.931-6.287-4.631s-5.236 2.805-5.233 5.796v4.364h16c2.41 0 4.364 1.954 4.364 4.364v10.182c0 2.41-1.954 4.364-4.364 4.364h-20.364c-2.41 0-4.364-1.954-4.364-4.364v-10.182c0-2.41 1.954-4.364 4.364-4.364h1.455z"></path>
 </symbol>
-<symbol id="icon-download" viewBox="0 0 32 32">
-<title>download</title>
-<path stroke-width="3.2" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M30.4 20.8v6.4c0 1.767-1.433 3.2-3.2 3.2h-22.4c-1.767 0-3.2-1.433-3.2-3.2v-6.4"></path>
-<path stroke-width="3.2" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M8 12.8l8 8 8-8"></path>
-<path stroke-width="3.2" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M16 20.8v-19.2"></path>
+<symbol id="icon-info-copy" viewBox="0 0 32 32">
+<title>info-copy</title>
+<path d="M16 32c-8.837 0-16-7.163-16-16s7.163-16 16-16c8.837 0 16 7.163 16 16s-7.163 16-16 16zM16 28.444c6.873 0 12.444-5.572 12.444-12.444s-5.572-12.444-12.444-12.444c-6.873 0-12.444 5.572-12.444 12.444s5.572 12.444 12.444 12.444zM17.778 21.689c0 0.982-0.796 1.778-1.778 1.778s-1.778-0.796-1.778-1.778v-5.689c0-0.982 0.796-1.778 1.778-1.778s1.778 0.796 1.778 1.778v5.689zM16 12.444c-0.982 0-1.778-0.796-1.778-1.778s0.796-1.778 1.778-1.778c0.982 0 1.778 0.796 1.778 1.778s-0.796 1.778-1.778 1.778z"></path>
 </symbol>
 <symbol id="icon-external-link" viewBox="0 0 32 32">
 <title>external-link</title>
-<path stroke-width="3.2" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M25.6 17.6v9.6c0 1.767-1.433 3.2-3.2 3.2h-17.6c-1.767 0-3.2-1.433-3.2-3.2v-17.6c0-1.767 1.433-3.2 3.2-3.2h9.6"></path>
-<path stroke-width="3.2" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M20.8 1.6h9.6v9.6"></path>
-<path stroke-width="3.2" stroke-miterlimit="4" stroke-linecap="round" stroke-linejoin="round" d="M12.8 19.2l17.6-17.6"></path>
+<path d="M26.537 3.2h-5.737c-0.884 0-1.6-0.716-1.6-1.6s0.716-1.6 1.6-1.6h9.6c0.884 0 1.6 0.716 1.6 1.6v9.6c0 0.884-0.716 1.6-1.6 1.6s-1.6-0.716-1.6-1.6v-5.737l-14.869 14.869c-0.625 0.625-1.638 0.625-2.263 0s-0.625-1.638 0-2.263l14.869-14.869zM24 17.6c0-0.884 0.716-1.6 1.6-1.6s1.6 0.716 1.6 1.6v9.6c0 2.651-2.149 4.8-4.8 4.8h-17.6c-2.651 0-4.8-2.149-4.8-4.8v-17.6c0-2.651 2.149-4.8 4.8-4.8h9.6c0.884 0 1.6 0.716 1.6 1.6s-0.716 1.6-1.6 1.6h-9.6c-0.884 0-1.6 0.716-1.6 1.6v17.6c0 0.884 0.716 1.6 1.6 1.6h17.6c0.884 0 1.6-0.716 1.6-1.6v-9.6z"></path>
+</symbol>
+<symbol id="icon-book" viewBox="0 0 26 32">
+<title>book</title>
+<path d="M2.909 26.909c0 0.803-0.651 1.455-1.455 1.455s-1.455-0.651-1.455-1.455c0-2.812 2.279-5.091 5.091-5.091h19.636c0.803 0 1.455 0.651 1.455 1.455s-0.651 1.455-1.455 1.455h-19.636c-1.205 0-2.182 0.977-2.182 2.182z"></path>
+<path d="M23.273 2.909h-18.182c-1.205 0-2.182 0.977-2.182 2.182v21.818c0 1.205 0.977 2.182 2.182 2.182h18.182v-26.182zM5.091 0h19.636c0.803 0 1.455 0.651 1.455 1.455v29.091c0 0.803-0.651 1.455-1.455 1.455h-19.636c-2.812 0-5.091-2.279-5.091-5.091v-21.818c0-2.812 2.279-5.091 5.091-5.091z"></path>
+</symbol>
+<symbol id="icon-download" viewBox="0 0 32 32">
+<title>download</title>
+<path d="M17.6 16.937l5.269-5.269c0.625-0.625 1.638-0.625 2.263 0s0.625 1.638 0 2.263l-8 8c-0.625 0.625-1.638 0.625-2.263 0l-8-8c-0.625-0.625-0.625-1.638 0-2.263s1.638-0.625 2.263 0l5.269 5.269v-15.337c0-0.884 0.716-1.6 1.6-1.6s1.6 0.716 1.6 1.6v15.337zM28.8 20.8c0-0.884 0.716-1.6 1.6-1.6s1.6 0.716 1.6 1.6v6.4c0 2.651-2.149 4.8-4.8 4.8h-22.4c-2.651 0-4.8-2.149-4.8-4.8v-6.4c0-0.884 0.716-1.6 1.6-1.6s1.6 0.716 1.6 1.6v6.4c0 0.884 0.716 1.6 1.6 1.6h22.4c0.884 0 1.6-0.716 1.6-1.6v-6.4z"></path>
 </symbol>
 <symbol id="icon-community" viewBox="0 0 32 32">
 <title>community</title>
